--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,7 @@
   <meta name="description" content="Termos e Condições.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +22,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
@@ -57,13 +58,13 @@
         </address>
         <div class="contato-redes">
           <a href="#">
-            <img src="./img/redes/instagram-p.svg" alt="Instagram">
+            <img src="./img/redes/instagram-p.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="#">
-            <img src="./img/redes/facebook-p.svg" alt="Facebook">
+            <img src="./img/redes/facebook-p.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="#">
-            <img src="./img/redes/youtube-p.svg" alt="Youtube">
+            <img src="./img/redes/youtube-p.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </section>
@@ -132,7 +133,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -143,13 +144,13 @@
         </ul>
         <div class="footer-redes">
           <a href="#">
-            <img src="./img/redes/instagram.svg" alt="Instagram">
+            <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="#">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+            <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="#">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
