--- a/orcamento.html
+++ b/orcamento.html
@@ -10,12 +10,14 @@
   <meta name="description" content="Orçamento.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="preload" href="./css/style.css" as="style">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:ital,wght@0,400;1,500&family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
+  <script>document.documentoElement.classList.add('js');</script>
 </head>
 
 <body id="orcamento">
@@ -190,6 +192,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
