--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -93,7 +93,7 @@
   </main>
 
   <article class="bicicletas-lista container">
-    <h2 class="font-1-xxl">escoha a sua<span class="cor-p1">.</span></h2>
+    <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
 
     <ul>
       <li>
