--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </main>
 
   <article class="bicicletas-lista">
-    <h2 class="container font-1-xxl">escoha a sua<span class="cor-p1">.</span></h2>
+    <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
 
     <ul>
       <li>
