--- a/orcamento.html
+++ b/orcamento.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <form class="orcamento conainer" action="./">
+    <form class="orcamento conainer" action="./enviar.php" method="post">
       <div class="orcamento-produto">
         <h2 class="font-1-xs cor-5">Bikcraft ou Seguro</h2>
         <input type="radio" name="tipo" value="bikcraft" id="bikcraft">
