--- a/termos.html
+++ b/termos.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:ital,wght@0,400;1,500&family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
-  <script>document.documentoElement.classList.add('js');</script>
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body id="termos">
